--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MushroomHunter</string>
+    <string name="app_name">MushroomHuntr</string>
 
     <string name="camera_error">Camera error</string>
 </resources>
